--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -558,7 +558,7 @@ EXTPAR = { {61, LambdaInput},
 
 HighScaleInput = {
    ...
-   {T[\[Lambda]], ALambdaInput},
+   {T[\[Lambda]], ALambdaInput LambdaInput},
    ...
 };
 \end{lstlisting}
