use proper shell command

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -469,7 +469,8 @@ the system requirements and creates the \code{Makefile}.  See
 will start \mathematica to generate the spectrum generator and compile
 it.  The resulting executable can be run like this:
 \begin{lstlisting}[language=bash]
-$ models/MSSM/run_MSSM.x --slha-input-file=model_fies/MSSM/LesHouches.in.MSSM
+$ ./models/MSSM/run_MSSM.x \
+    --slha-input-file=model_fies/MSSM/LesHouches.in.MSSM
 \end{lstlisting}%% $
 %
 When executed, the spectrum generator tries to find a set of \DRbar\
