--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -716,7 +716,12 @@ The meaning of the three constraints is the following:
   usually the GUT-scale constraint, imposed at the scale where the
   gauge couplings $g_1$ and $g_2$ unify.  The high-scale can be
   defined by an equation of the form \code{g1 == g2} or by a fixed
-  numerical value.
+  numerical value.  Note, that \fs GUT-normalizes all gauge couplings.
+  Thus, the high-scale definition takes the simple form \code{g1 ==
+    g2}.  As a consequence in the calculation of the VEVs $v_u$ and
+  $v_d$ from $M_Z$ and $\tan\beta$ at the low-scale the
+  GUT-normalization has to be taken into account, see the example
+  above.
 %
 \item \emph{SUSY-scale constraint:} The SUSY-scale is the typical mass
   scale of the SUSY particle spectrum.  At this scale \fs imposes the
@@ -730,28 +735,20 @@ The meaning of the three constraints is the following:
 %
 \item \emph{Low-scale constraint:} The low-scale constraint is the
   constraint where the SUSY model is matched to the Standard Model.
-  This is done by calculating the gauge couplings $g_i$ ($i=1,2,3$)
-  and the Yukawa couplings $y_f$ ($f=u,d,e$) from the known Standard
-  Model quantities $\alpha_{\text{e.m.}}(M_Z^\pole)$,
-  $\alpha_{s}(M_Z^\pole)$, $m_f^\pole$, $M_Z^\pole$, $M_W^\pole$.  The
-  details of the calculation are explained in
-  sections~\ref{sec:calculation-of-gauge-couplings}--\ref{sec:calculation-of-yukawa-couplings}.
-  Currently this scale is fixed to be the $Z$ pole mass scale
-  $M_Z^\pole$.  The calculation of the gauge couplings is done
-  automatically and is not needed to be specified in the
-  \code{LowScaleInput} variable.  The calculation of the Yukawa
-  couplings is optional.  If the Yukawa couplings are set to the value
-  \code{Automatic}, they are determined automatically from the known
-  Standard Model fermion masses $m_f$ as explained in section
+  This is done by automatically calculating the gauge couplings $g_i$
+  ($i=1,2,3$) of the SUSY model from the known Standard Model
+  quantities $\alpha_{\text{e.m.}}(M_Z^\pole)$,
+  $\alpha_{s}(M_Z^\pole)$, $M_Z^\pole$, $M_W^\pole$.  The details of
+  the calculation are explained in
+  section~\ref{sec:calculation-of-gauge-couplings}.  Currently this
+  scale is fixed to be the $Z$ pole mass scale $M_Z^\pole$.
+  Optionally the Yukawa couplings $y_f$ ($f=u,d,e$) can be calculated
+  automatically from the known Standard Model fermion masses $m_f$ by
+  setting their values to \code{Automatic}.  This automatic
+  calculation is explained in section
   \ref{sec:calculation-of-yukawa-couplings}.
 \end{itemize}
 %
-Note, that \fs GUT-normalizes all gauge couplings.  Thus, the
-high-scale definition takes the simple form \code{g1 == g2}.  Another
-consequence is that in the calculation of the VEVs $v_u$ and $v_d$
-from $M_Z$ and $\tan\beta$ at the low-scale the GUT-normalization has
-to be taken into account, see the example above.
-
 The list of parameter settings for imposing a constraint can contain
 as elements any of the following:
 %
