--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -468,8 +468,9 @@ the system requirements and creates the \code{Makefile}.  See
 \code{./configure --help} for more options.  Executing \code{make}
 will start \mathematica to generate the spectrum generator and compile
 it.  The resulting executable can be run like this:
+%
 \begin{lstlisting}[language=bash]
-$ ./models/MSSM/run_MSSM.x \
+$ models/MSSM/run_MSSM.x \
     --slha-input-file=model_files/MSSM/LesHouches.in.MSSM
 \end{lstlisting}%% $
 %
