doc/paper.tex: fix a dangling ref

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -1682,7 +1682,7 @@ refer to \secref{Sec:modfile}.
 
 \subsubsection{Changing boundary conditions}
 
-As already emphasized in \secref{sec:design goals}, the modular design of
+As already emphasized in \secref{Sec:Program}, the modular design of
 \fs makes it straightforward % to change a boundary condition.
 % Within the present C++ code structure,
 % this task reduces
