note about tan(beta) resummation in Delta mb

--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -1215,7 +1215,8 @@ The \DRbar mass of the bottom quark is calculated as
       g_2^2}{128 \pi^2} + \frac{13 g_Y^2}{1152 \pi^2}\right) ,
 \end{align}
 %
-and the \DRbar mass of the $\tau$ is calculated as
+where $\tan\beta$ enhanced loop self-energy corrections are resummed.
+Finally, the \DRbar mass of the $\tau$ is calculated as
 %
 \begin{align}
   \begin{split}
