--- a/doc/paper.tex
+++ b/doc/paper.tex
@@ -877,9 +877,39 @@ model file example above, the particles \code{Chi}, \code{Cha},
 chargino, gluino, sneutrino, up-type squark, down-type squark,
 selectron) are considered to be LSPs.
 
-\section{Stucture of the spectrum generator}
+\section{Structure of the spectrum generator}
 \label{Sec:SpecGenStruct}
+
+In this section we explain the internals of \fs's automatically
+generated spectrum generator.
+%
+As mentioned in \secref{Sec:Program} one of \fs's design goals is to
+create modular C++ code to allow for an easy exchange, extension and
+reuse of the generated modules.  For this reason
+\secref{Sec:ModelParametersAndRGEs} briefly describes the so-called
+``model class'' hierarchy, which contains the general model
+information, such as parameters, $\beta$-functions, \DRbar\ mass
+spectrum, EWSB, self-energies, and the pole mass spectrum.
+%
+\secref{sec:boundary-conditions} describes how boundary conditions on
+the model parameters are implemented in general at the C++ level.  The
+subsections \ref{sec:calculation-of-gauge-couplings}--\ref{sec:ewsb}
+explain how the parameters of the SUSY model are matched to the
+Standard Model at the low scale and how the EWSB is imposed.
+%
+In \secref{sec:TreeLevelSpectrum} we describe the conventions used to
+calculate the \DRbar\ mass spectrum.
+%
+In \secref{sec:TwoScaleFixedPointIteration} the algorithm which solves
+the user-defined boundary value problem is described on the basis of
+the CMSSM example given in \secref{Sec:modfile}.
+%
+Finally, \secref{Sec:PoleMasses} briefly summarizes how the pole mass
+spectrum is obtained from the \DRbar\ model parameters after a
+solution to the boundary value problem has been found.
+
 \subsection{Model parameters and RGEs}
+\label{Sec:ModelParametersAndRGEs}
 
 The parameters of the SUSY model together with their RGEs are stored
 in the model class hierarchy, see the UML diagram in
@@ -1336,6 +1366,7 @@ can be added by setting \code{UseHiggs2LoopNMSSM = True;} in the model
 file.
 
 \subsection{Tree-level spectrum}
+\label{sec:TreeLevelSpectrum}
 The tree-level \DRbar masses are calculated by diagonalizing the mass
 matrices returned from \code{SARAH`MassMatrix[]}.  The numerical
 singular value decomposition is performed by the Eigen library routine
@@ -1404,6 +1435,7 @@ where we're again chosing the phases of $U$ and $V$ such that all mass
 eigenvalues are positive.
 
 \subsection{Two-scale fixed point iteration}
+\label{sec:TwoScaleFixedPointIteration}
 
 The RGEs for the model parameters together with the boundary
 conditions form a boundary value problem.  The default two-scale RG
@@ -1553,6 +1585,7 @@ input file, all model parameters are run to the defined output scale.
 \end{figure}
 
 \subsection{Pole masses}
+\label{Sec:PoleMasses}
 After the solver routine has finished and convergence has been
 achieved, all $\overline{DR}$ parameters consistent with the
 one-loop EWSB conditions, low energy data and all user supplied
